--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -15,3 +15,7 @@ select:-webkit-autofill:focus {
   -webkit-background-clip: text;
   background-color: #1f2937 !important; /* Your desired background color */
 }
+body {
+  background-color: #18181b; /* bg-zinc-900 */
+}
+
